# claude-auto-approve-osx

./: .gitignore  README.md  claude_auto_approve.py  claude_auto_approve_osx.py  pyproject.toml  requirements.txt
src/claude_auto_approve_osx/: __init__.py  accessibility_utils.py  window_focus.py
