[project]
name = "claude-auto-approve-osx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mss>=6.1.0",
    "opencv-python>=4.5.0",
    "pillow>=8.4.0",
    "pyautogui>=0.9.53",
    "pyobjc-core>=7.3",
    "pyobjc-framework-cocoa>=7.3",
    "pyobjc-framework-quartz>=7.3",
    "pytesseract>=0.3.8",
]

[dependency-groups]
dev = [
    "ruff>=0.1.5",
]

[build-system]
build-backend  = 'hatchling.build'
requires       = ['hatchling']

[project.scripts]
claude-auto-approve-osx = "claude_auto_approve_osx:main"

