[project]
name = "claude-auto-approve-osx"
version = "0.1.0"
description = "Claude tool auto-approval utility for macOS using Accessibility APIs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyobjc-core==10.3.2",
    "pyobjc-framework-applicationservices==10.3.2",
    "pyobjc-framework-cocoa==10.3.2",
    "pyobjc-framework-quartz==10.3.2",
]

[dependency-groups]
dev = [
    "ruff>=0.1.5",
]

[build-system]
build-backend  = 'hatchling.build'
requires       = ['hatchling']

[project.scripts]
claude-auto-approve-osx = "claude_auto_approve_osx:main"
